lab-tasks/2-fault-abort/virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: http-server
spec:
  hosts:
    - http-server
  http:
    - fault:
        abort:
          httpStatus: 503
          percentage:
              value: 50
      route:
        - destination:
            host: http-server
            subset: v1
